--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </style>
 </head>
 <body>
-<img src="images/Pocoyo.jpeg" class="img" alt="Pocoyo">
+<img src="Pocoyo.jpeg" class="img" alt="Pocoyo">
 <h2 class="head">Haloo bee sayangg cobaa tekan tombol dibawah ini</h2>
     <button
      id="btn"
