--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buat kamuuu</title>
+    <title>Buat sayanggkuu</title>
     <style>
         body {
             background-color: pink;
@@ -44,7 +44,7 @@
 </head>
 <body>
 <img src="Pocoyo.jpeg" class="img" alt="Pocoyo">
-<h2 class="head">Haloo kamuu cobaa tekan tombol dibawah ini</h2>
+<h2 class="head">Haloo beee sayangg cobaa tekan tombol dibawah ini</h2>
     <button
      id="btn"
      onclick="clickButton()"
@@ -62,7 +62,7 @@ function clickButton() {
     btn2.style.backgroundColor = 'wheat'
     btn2.style.color = 'black'
     const isi = document.createElement('h1')
-    isi.textContent = 'aku sayanggg kamuu &#129293;'
+    isi.textContent = 'aku sayanggg sekaliii samaa Danish Alya Rahma'
     body.append(isi)
 }
 
